--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #veditor {
-    background-image: url(https://view.moezx.cc/images/2018/03/24/comment-bg.png);
+    background-image: url(https://cdn.jsdelivr.net/gh/ouyangyanhuo/CDN@1.4/img/other/comment-bg.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right;
